--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.3.0",
+    "react-toastify": "^9.0.8",
     "react_ujs": "^2.6.2",
     "remixicon": "^2.5.0",
     "tailwindcss": "1.9.6",
